welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: type mismatch;
 found   : Int(23)
 required: Boolean
  if (talking == true && 0 <= hour <= 23) {return true}
                                      ^